<resources>
    <string name="app_name">AndroidLabs</string>
    <string name="not_access_text">Not access</string>
    <string name="IMEI_exploration_string">
        Allow application to make and manage phone calls for show your IMEI
    </string>
    <string name="Exploration_title">Message</string>
    <string name="OK_string">OK</string>
    <string name="menu_about">About</string>
    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="label_imei">IMEI</string>
    <string name="label_version">Version</string>
    <string name="label_name">Name</string>
    <string name="label_surname">Surname</string>
    <string name="label_phone_number">Phone number</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="text_edit_profile">Edit profile</string>
    <string name="text_save_profile">Save profile</string>
    <string name="name_required">Name is required</string>
    <string name="password_required">Password is required</string>
    <string name="surname_required">Surname is required</string>
    <string name="email_required">Email is required</string>
    <string name="phone_number_required">Phone number is required</string>
    <string name="phone_number_incorrect">Must contain "+" and 10&#8211;13 </string>
    <string name="email_incorrect">Email is incorrect</string>
    <string name="take_photo_from_camera">Take photo from camera</string>
    <string name="choose_photo_from_gallery">Choose photo from gallery</string>
    <string name="text_log_in">Log In</string>
    <string name="text_sign_up">Sign Up</string>
    <string name="label_confirm_password">Confirm password</string>
    <string name="log_in_error">Incorrect login or password</string>
    <string name="passwords_must_match">Passwords must match</string>
    <string name="log_out">Log Out</string>
    <string name="menu_settings">Settings</string>
    <string name="no_internet">No internet connection</string>
    <string name="text_apply">Apply</string>
    <string name="settings_saved">Settings saved</string>
    <string name="label_RSS_link">RSS Link</string>
    <string name="menu_refresh">Refresh news</string>
    <string name="text_warning">Warning</string>
    <string name="unsaved_changes_message">You have unsaved changes, do you want to save it?</string>
    <string name="text_save">Save</string>
    <string name="text_not_save">Close without saving</string>
    <string name="rss_link_required">Need to set the rss link</string>
    <string name="text_logged">You are logged in as {0}</string>
    <string name="text_connection_error">Connection error</string>
    <string name="error_email_already_registered">User with this email already registered</string>
    <string name="profile_saved">Profile saved</string>
    <string name="error_incorrect_input">Incorrect data entered</string>
</resources>
